--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: 'poppins';
 }
 
 .App-logo {
@@ -37,6 +38,19 @@
   }
 }
 
+/* navbar */
+.navbar {
+  display: flex;
+  justify-content: center;
+  height: 4rem;
+  background: rgb(241, 61, 61);
+  color: aliceblue;
+  margin-bottom: 1rem;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+.fa-earth-americas {
+  padding-right: 0.5rem;
+}
 
 /* card */
 
@@ -44,11 +58,13 @@
   overflow: hidden;
 
   width: 25rem;
-  background: white;
+  background: rgb(255, 255, 255);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
   border-radius: 1rem;
+  margin-left: 1rem;
+  padding: 1rem;
 }
 
 .card img {
