--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #5c6372;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,7 +26,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #155e72;
 }
 
 @keyframes App-logo-spin {
@@ -55,7 +55,7 @@
 /* card */
 
 .card {
-  overflow: hidden;
+  /* overflow: hidden;
 
   width: 25rem;
   background: rgb(255, 255, 255);
@@ -63,21 +63,59 @@
   display: flex;
   align-items: center;
   border-radius: 1rem;
-  margin-left: 1rem;
   padding: 1rem;
+  display: grid; */
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+  width: 100%;
+  height: 200px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+
 }
 
 .card img {
-  padding-top: 1rem;
+  /* padding-top: 1rem;
   height: 100%;
   width: 120px;
   object-fit: cover;
+ */
+ flex: 1;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 100%;
+  max-width: 100%;
 }
 
+.card--infos {
+  flex: 1;
+  height: 100%;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+}
 .card p {
-  font-size: 1rem;
+  /* font-size: 1rem;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
-  margin-top: 8px;
+  margin-top: 8px; */
+  /* height: 100%; */
+  /* flex: 2; */
+  /* padding: 20px; */
+  /* font-size: 18px; */
+  /* line-height: 1.5; */
+}
+
+.card--infos--top {
+  display: flex;
+}
+
+.card--infos--date {
+  display: flex;
 }
