--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   font-family: 'poppins';
+  background-color: beige;
 }
 
 .App-logo {
@@ -55,67 +56,54 @@
 /* card */
 
 .card {
-  /* overflow: hidden;
 
-  width: 25rem;
-  background: rgb(255, 255, 255);
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: center;
-  border-radius: 1rem;
-  padding: 1rem;
-  display: grid; */
   display: flex;
   flex-direction: row;
-  /* align-items: center; */
-  width: 100%;
-  height: 200px;
+  width: 80%;
+  height: 15rem;
   border: 1px solid #ccc;
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  background-color:#fef8ee;
+  margin-bottom: 1rem;
 
 }
 
 .card img {
-  /* padding-top: 1rem;
-  height: 100%;
-  width: 120px;
-  object-fit: cover;
- */
- flex: 1;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
   max-height: 100%;
-  max-width: 100%;
+  padding: 1rem;
 }
 
 .card--infos {
   flex: 1;
   height: 100%;
-  /* display: flex; */
-  justify-content: center;
-  align-items: center;
 }
-.card p {
-  /* font-size: 1rem;
-  line-height: 1.4;
-  opacity: .7;
+.card--description {
+  text-align: left;
+  font-size: 0.8rem;
   margin-bottom: 0;
-  margin-top: 8px; */
-  /* height: 100%; */
-  /* flex: 2; */
-  /* padding: 20px; */
-  /* font-size: 18px; */
-  /* line-height: 1.5; */
+  color: #646972;
+
 }
 
 .card--infos--top {
+  padding-top: 1rem;
   display: flex;
 }
 
 .card--infos--date {
   display: flex;
+}
+
+.maplink {
+  padding-left: 1rem;
+  color: #ccc;
+  display: ;
+}
+
+.card--infos--title {
+  display: -webkit-box;
+  font-size: 2rem;
 }
